adjusted to BigDecimal